docs: refresh README + DESIGN to current state, restructured to prevent drift
The two docs kept drifting because both carried phase-numbered status/changelog content. Fixed structurally:

- DESIGN.md = durable architecture only (present-tense seams, layers, principles, decisions, known gaps). Removed the phase-by-phase roadmap (that's git history) and the stale 'Phase 0 / to follow' seam notes. Points to the README for the live capability list.
- README.md = single source of truth for capabilities + status. Replaced the phase-numbered status paragraph with a stable capability list; removed the stale bottom 'Roadmap' (it still claimed tool-calling/OTel/ADK as 'near-term' — all long done); updated the examples module line to point at examples/README.

Now: capabilities live once (README), architecture lives once (DESIGN), history lives in git — so they stop diverging.